Changes: added a condition to handle 0 philos. Deleted the calling of check_if_dead during the routines of philo. Created philo directory. Fixed the case where the nr of philos is odd. Cleaned unnecessary checks. Make the philos start in the same time. Made the program to wor properly if there is the optional argument. Hnalded a big nr of philos. Fixed the data races.

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -7,6 +7,9 @@ CC = cc
 # Compiling flags
 CFLAGS = -Wall -Wextra -Werror
 
+# Linking flags
+LDFLAGS = -lpthread
+
 # Directories
 OBJ_DIR = objects
 INCLUDES = ./philo.h
@@ -28,7 +31,7 @@ all: $(NAME)
 
 # Build the project
 $(NAME): $(OBJECTS)
-	$(CC) $(CFLAGS) -o $(NAME) $(OBJECTS)
+	$(CC) $(CFLAGS) -o $(NAME) $(OBJECTS) $(LDFLAGS)
 
 # Create directory for objects, and compile source files into object files
 $(OBJ_DIR)/%.o: %.c $(INCLUDES)
